# Jellyfish_Case_BackEnd

./: .env.example  .gitignore  README.md  coin_api.py  database.sql  pyproject.toml  requirements.txt
app_DB_work/: config.py  crud.py  main.py  model.py  router.py  schema.py
app_tortoise/: db.sqlite3  db.sqlite3-shm  main.py
app_user_auth/: aux_function.py  crud.py  database.py  init_db.py  mains.py  models.py  schemas.py
app_user_auth/auth/: jwt_bearer.py  jwt_handler.py
src/: database.py
src/api/: alert.py  entrypoint.py  notif.py  user.py
src/auth/: jwt_bearer.py
src/helpers/: alert.py  schedule.py
src/repositories/: alert.py  user.py
